# Blog_Range_v3

./: .gitignore  CMakeLists.txt  data_processing.cpp  data_processing.h  main.cpp  swedish_insurance.csv
